--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# OS junk
+[Tt]humbs.db
+*.DS_Store
+
+bin/
+obj/
+
 # User-specific files
 *.rsuser
 *.suo
